@@ -3,7 +3,7 @@ DIST javacc-4.0src.tar.gz 765150 RMD160 c33b1b9a518c229a87265bb4b200444a5b921380
 DIST javacc-4.2src.tar.gz 843455 RMD160 4ba13c1bb9ca938967aa528178b5fcb6e59eeb20 SHA1 77c69c13544d78402c0484e78574f7bd3dd10de4 SHA256 504d452ea1904e5b3a2728cbcacf0b9916630bd2ba746112104f741cec230139
 DIST javacc-5.0src.tar.gz 810123 RMD160 982c63a8b2e9fbec6a19bd110344c3a9547a7577 SHA1 41159a705cf118f8e8c687a2fe2e923361ab35f7 SHA256 766cae9d3710054f452a7f0779db885eacfdae363152cb2e7fe025aa7ea17370
 EBUILD javacc-4.0-r4.ebuild 1592 RMD160 f592fb279a8885bc2d41b2f0cc566c983f95c0df SHA1 2c12cefde8196904e5daf29d1307cf382a22af1b SHA256 2b4f873839ce8933ccac962855b57e01d07b647bfe2eaa7b072eb182495e4a92
-EBUILD javacc-4.2.ebuild 1887 RMD160 fb81bf960e6b62fb2aa95b80241695eee2c23df3 SHA1 f0e53774bf42726ac27d1535d9439a37074cc031 SHA256 b1bda6566fe3f9322746673dfba3fdb2c04a7bdb176a86ad827ff7717e275158
+EBUILD javacc-4.2.ebuild 1890 RMD160 e6279816458314fb328223a008c936caf5ed11e0 SHA1 75a18a03d20af2b36ec1e607e0c59e3581120fa0 SHA256 3f4e61000e1690d0317c2b2fdeef3b0f0baf5dcbbef17e57a1d497f1d1a3cd07
 EBUILD javacc-5.0.ebuild 1889 RMD160 faa1c8273655a74e4ac067ce27040e5c65c9d81d SHA1 7b8fad325fe431691daf0300fcb186811295cdc5 SHA256 c1c53c710e3422fc77c3e4841c9ebbfef31faea9010cf2da0a7a9c9ebc9327a9
-MISC ChangeLog 5037 RMD160 5217789510d642bb5d41fd1c6d36c141188ec514 SHA1 e2362da1eab1651f1957683047417dc74da54d21 SHA256 fd99135d29c5a56f7cd3948513ed5321b86cb4f20242ce3857b49b2bb0be2b1d
+MISC ChangeLog 5143 RMD160 6b3c9a651a5a6ef7cfa19824a6dab418ece3af19 SHA1 5c67787df4d65a1e90be9ef785069be0f1674c55 SHA256 7d882a94e5aadba5d4b0c93b0ee471c7f3ce5251fca854fbb824f15957eb07e5
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
