@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/javacc
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/javacc/ChangeLog,v 1.31 2010/03/16 11:12:41 ali_bush Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/javacc/ChangeLog,v 1.32 2010/03/21 15:32:57 phajdan.jr Exp $
+
+  21 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> javacc-4.2.ebuild:
+  x86 stable wrt bug #309265
 
 *javacc-5.0 (16 Mar 2010)
 
